[gd_scene load_steps=9 format=2]

[ext_resource path="res://Anton-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Login.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.952941, 0.952941, 0.952941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=5]
size = 26
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.6, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Login" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0.6, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Form" type="Panel" parent="Background"]
margin_left = 296.0
margin_top = 62.0
margin_right = 748.0
margin_bottom = 519.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background/Form"]
self_modulate = Color( 0, 0.742188, 1, 1 )
margin_right = 452.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 2 )
text = "Login"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameField" type="LineEdit" parent="Background/Form"]
margin_left = 64.0
margin_top = 124.0
margin_right = 388.0
margin_bottom = 175.0
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordField" type="LineEdit" parent="Background/Form"]
margin_left = 64.0
margin_top = 198.0
margin_right = 388.0
margin_bottom = 249.0
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
placeholder_text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="Background/Form"]
self_modulate = Color( 0.435294, 0.435294, 0.435294, 1 )
margin_left = 64.0
margin_top = 276.0
margin_right = 527.0
margin_bottom = 315.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="Background/Form"]
margin_left = 64.0
margin_top = 330.0
margin_right = 388.0
margin_bottom = 376.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeForm" type="Button" parent="Background/Form"]
self_modulate = Color( 0, 0.6, 1, 1 )
margin_left = 64.0
margin_top = 394.0
margin_right = 527.0
margin_bottom = 439.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 5 )
text = "I dont have account - Register"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Background/Form/Submit" to="." method="_on_Submit_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
